# BaseOpeGl

./: .gitignore  CMakeLists.txt  main.cpp  test1.cpp
res/: controlFRG.glsl  defaultFRG.glsl  defaultSpriteFRG.glsl  defaultSpriteVER.glsl  defaultVER.glsl
res/shaders/: controlVER.glsl  defaultFRG.glsl
src/: Application.cpp  Application.h  MultiTexture2D.cpp  MultiTexture2D.h  Object2D.cpp  Object2D.h  ResourceManager.cpp  ResourceManager.h  ShaderProgram.cpp  ShaderProgram.h  Sprite2D.cpp  Sprite2D.h  SpriteAnimator.cpp  SpriteAnimator.h  SubTexture2D.cpp  SubTexture2D.h  Texture2D.cpp  Texture2D.h
src/Core/: Application.cpp  Application.h  BufferObjects.cpp  BufferObjects.h  Button.cpp  Button.h  DialogWindow.cpp  DialogWindow.h  Event.h  EventManager.cpp  EventManager.h  EventSystem.h  Font.cpp  Font.h  Label.cpp  Label.h  Menu.cpp  Menu.h  MultiTexture2D.h  Object2D.cpp  Object2D.h  Render.cpp  Render.h  ResourceManager.cpp  ResourceManager.h  ShaderProgram.cpp  ShaderProgram.h  Sprite2D.cpp  Sprite2D.h  SpriteAnimator.cpp  SubTexture2D.h  Subscriber.h  TextRender.cpp  TextRender.h  Texture2D.cpp  Texture2D.h  Utilities.cpp  Utilities.h
src/Game/: Figure.cpp  Figure.h  Game.cpp  Game.h  Level.cpp  Level.h  SquareNode.cpp  SquareNode.h
src/Render/: BufferObjects.cpp  BufferObjects.h  Font.h  Render.h  Sprite2D.cpp  Sprite2D.h  SpriteAnimator.h  TextRender.cpp  TextRender.h  Texture2D.cpp
